# DIO-python-fastapi-workout_api

./: .env  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
alembic/: env.py
workout_api/: main.py
workout_api/atleta/: controller.py
workout_api/categorias/: controller.py
workout_api/centro_treinamento/: controller.py
workout_api/configs/: settings.py
