[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = ""
authors = ["Samuel Fujimoto <fujimoto.samuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
fastapi-pagination = "^0.12.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
